<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.AdminChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logotext_02"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/shape1"

        android:drawableLeft="@drawable/lock"
        android:drawableRight="@drawable/visibilityoff"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:inputType="textWebPassword"
        android:id="@+id/admchangepassold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:background="@drawable/shape1"

        android:drawableLeft="@drawable/lock"
        android:drawableRight="@drawable/visibilityoff"
        android:layout_marginHorizontal="10dp"
        android:inputType="textWebPassword"
        android:layout_marginTop="15dp"
        android:id="@+id/admchangenewpass"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/shape1"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/lock"
        android:inputType="textWebPassword"
        android:drawableRight="@drawable/visibilityoff"
        android:layout_marginTop="15dp"
        android:id="@+id/admconfirmchangepass"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admchangepassword_errormessage"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:layout_margin="5dp"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:id="@+id/admconformpasschange"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttoncolor"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>