<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogo_03"
    tools:context=".Activitys.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logotext_02" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/changepassold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"

            android:background="@drawable/shape1"
            android:drawableLeft="@drawable/lock"
            android:drawableRight="@drawable/visibilityoff"
            android:hint="@string/old_password"
            android:inputType="textWebPassword"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <EditText
            android:id="@+id/changenewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape1"
            android:drawableLeft="@drawable/lock"
            android:drawableRight="@drawable/visibilityoff"
            android:hint="@string/new_password"
            android:inputType="textWebPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/confirmchangepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"

            android:layout_marginTop="15dp"
            android:background="@drawable/shape1"
            android:drawableLeft="@drawable/lock"
            android:drawableRight="@drawable/visibilityoff"
            android:hint="@string/confirm_password"
            android:inputType="textWebPassword"
            android:padding="20dp" />

        <TextView
            android:id="@+id/changepassword_errormessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/red" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:id="@+id/conformpasschange"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttoncolor"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>