<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logotext_02"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/admin_login"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"/>
<!--    <View-->
<!--        android:layout_width="70dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@android:color/black" />-->


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/adminuseremail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="120dp"
        android:layout_marginStart="32dp"
        android:textColorHint="@color/black"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/person"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:id="@+id/adminuserpassword"
        android:inputType="textWebPassword"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/lock"
        android:drawableRight="@drawable/eyeopen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminlogin_errormessage"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="gone"
        android:padding="13dp"
        android:layout_centerHorizontal="true">

        <ProgressBar
            android:id="@+id/loader"
            android:layout_marginEnd="5dp"
            android:layout_width="45dp"
            android:layout_height="45dp" />
        <TextView
            android:layout_width="wrap_content"
            android:text="Loading..."
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:id="@+id/loading_msg"
            android:layout_toEndOf="@+id/loader"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/adminloginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/purple_500"
        android:text="@string/login"
        android:layout_marginBottom="90dp"
        android:textColor="@color/white" />


</RelativeLayout>